--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-uuid": "^2.0.2",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
