--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "expo": "~51.0.28",
     "expo-camera": "^15.0.16",
-    "expo-image-picker": "^15.0.7",
+    "expo-splash-screen": "^0.27.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
