--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "^2.20.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-uuid": "^2.0.2",
